# TranslatorUtils

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  justfile  pyproject.toml
.github/: ISSUE_TEMPLATE.md
dataExtraction/: TranslatorExtract.py
dataVisualization/: TranslatorShow.py
docs/: index.md  installation.md  usage.md
queries/: TranslatorMessages.py
src/translatorutils/: cli.py
src/translatorutils/dataExtraction/: TranslatorExtract.py
src/translatorutils/queries/: TranslatorMessages.py  __init__.py
tests/: __init__.py  test_translatorutils.py
