[project]
name = "TranslatorUtils"
version = "0.1.0"
description = "TranslatorUtils contains  methods to extract data from Translator ecosystem APIs (mostly ARS)."
readme = "README.md"
authors = [
  {name = "Sandrine Muller", email = "sandrine.muller.research@gmail.com"}
]
maintainers = [
  {name = "Sandrine Muller", email = "sandrine.muller.research@gmail.com"}
]
classifiers = [
    # TODO
]
license = {text = "MIT"}
dependencies = [
  "typer"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb", # debugging
]

[project.urls]
bugs = "https://github.com/sandrine-muller-research/translatorutils/issues"
changelog = "https://github.com/sandrine-muller-research/translatorutils/blob/master/changelog.md"
homepage = "https://github.com/sandrine-muller-research/translatorutils"

[project.scripts]
translatorutils = "translatorutils.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
